completed Algorithms file